add: DOM(createEleent,appendChild) examples

--- a/domLrn.html
+++ b/domLrn.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM_LRN</title>
 </head>
 <body>
-    <h1>This is the first example for DOM </h1>
+    <h1>This is the example for DOM working</h1>
     <script src="/domLrn1.js"></script>
 </body>
 </html>
